music times ads screwing up layout

--- a/Music-Times-demo/index.html
+++ b/Music-Times-demo/index.html
@@ -432,12 +432,6 @@ $(window).bind('scroll', function() {
     </div><!-- /top-con2 -->
 
 </header><!-- /header -->
-
-	<div id="adunit_article_center_top_computer" class="adunit_leaderboard"><div id="article_center_top_computer">
- <script type="text/javascript">
-  googletag.cmd.push(function() { googletag.display('article_center_top_computer'); });
- </script>
-<div style="border: 0pt none;" id="google_ads_iframe_/27637309/musictimes/articles_0__container__"><iframe src="javascript:&quot;<html><body style='background:transparent'></body></html>&quot;" style="border: 0px none; vertical-align: bottom;" marginheight="0" marginwidth="0" scrolling="no" name="google_ads_iframe_/27637309/musictimes/articles_0" id="google_ads_iframe_/27637309/musictimes/articles_0" width="970" frameborder="0" height="250"></iframe></div><iframe src="javascript:&quot;<html><body style='background:transparent'></body></html>&quot;" style="border: 0px none; vertical-align: bottom; visibility: hidden; display: none;" marginheight="0" marginwidth="0" scrolling="no" name="google_ads_iframe_/27637309/musictimes/articles_0__hidden__" id="google_ads_iframe_/27637309/musictimes/articles_0__hidden__" width="0" frameborder="0" height="0"></iframe></div></div>
 <section class="contents">
     <div class="innerwrap">
     <script type="text/javascript">
@@ -493,80 +487,8 @@ No. 2 status this week.</p>
 <script src="../build/Soundninja.min.js" type="application/javascript"></script>
 		<div class="at-tag">
 			See More <a href="http://www.musictimes.com/tags/wiz-khalifa">Wiz Khalifa</a> <a href="http://www.musictimes.com/tags/taylor-swift">Taylor Swift</a> <a href="http://www.musictimes.com/tags/fetty-wap">Fetty Wap</a> <a href="http://www.musictimes.com/tags/walk-the-moon">walk the moon</a> <a href="http://www.musictimes.com/tags/mark-ronson">Mark Ronson</a> <a href="http://www.musictimes.com/tags/bruno-mars">Bruno Mars</a> <a href="http://www.musictimes.com/tags/the-weeknd">The Weeknd</a> <a href="http://www.musictimes.com/tags/jason-derulo">Jason Derulo</a> <a href="http://www.musictimes.com/tags/david-guetta">David Guetta</a> <a href="http://www.musictimes.com/tags/nicki-minaj">Nicki Minaj</a> <a href="http://www.musictimes.com/tags/maroon-5">Maroon 5</a> <a href="http://www.musictimes.com/tags/t-wayne">T-Wayne</a>		</div>
+    
 	</article>
-
-<script type="text/javascript">
-	var flag=1; var loaded = 0;
-	$(document).ready(function(){
-		$("#anotherBox").css({'display':'block'});
-		$("#recBox").css({'display':'block'});
-		$("#recBox").css({"left":$(window).width()});
-		$("#anotherBox").css({"left":$(window).width()});
-		$("#recBox").click(function(){
-			$("#recBox").animate({"left":$(window).width()+12},200,function(){
-				$("#anotherBox").animate({"left":$(window).width()-$("#anotherBox").width()+10},300);
-			});
-			flag=1;
-		});
-	});
-	var exClose = function(){
-		$("#anotherBox").animate({"left":$(window).width()},300,function(){
-			$("#recBox").animate({"left":$(document.body).innerWidth()-45},200);
-		});
-		flag=0;
-	}
-	$(window).resize(function(){
-		$("#recBox").css({"left":$(window).width()});
-		$("#anotherBox").css({"left":$(window).width()});
-	});
-	$(window).scroll(function(){
-		if(($(window).height()+$(window).scrollTop())>$("#comment").position().top){
-			if(loaded==0) {
-				$("#anotherBox iframe").attr("src", "/home/news/recommend.php");
-				loaded = 1;
-			}
-			if(flag==1){
-				$("#recBox").css({"left":$(window).width()});
-				$("#anotherBox").css({"left":$(window).width()-$("#anotherBox").width()+10});
-			}else{
-				$("#recBox").css({"left":$(window).width()-45});
-				$("#anotherBox").css({"left":$(window).width()});
-			}
-		}else{
-			$("#recBox").css({"left":$(window).width()});
-			$("#anotherBox").css({"left":$(window).width()});
-		}
-	});
-	</script>
-	<div id="anotherBox" style="width: 370px; height: 103px; overflow: hidden; position: fixed; bottom: 0px; background: transparent url(&quot;http://assets.musictimes.com/static/common/_v0.0.0/img/recommend/shadow.png&quot;) repeat scroll 0% 0%; padding: 5px; border-radius: 5px; z-index: 100000; display: block; left: 1349px;"><iframe src="" marginheight="0" marginwidth="0" width="370" frameborder="0" height="108"></iframe></div><img src="Taylor%20Swift%20%27Bad%20Blood%27%20Slips%20on%20Hot%20100%20as%20Wiz%20Khalifa%20%27See%20You%20Again%27%20Rises%20to%20No.%201%20%20%20Buzz%20%20%20Music%20Times_files/close.png" id="recBox" style="display: block; cursor: pointer; position: fixed; bottom: 0px; z-index: 100000; left: 1349px;" alt="recommend close" width="46" height="198">    
-<div class="side">
-	<div id="adunit_video"><div style="position:relative; width:400px; height:300px;"><div style="position:absolute; margin-left:-200px; left:50%; width:400px; height:300px; z-index:1000;"><iframe src="Taylor%20Swift%20%27Bad%20Blood%27%20Slips%20on%20Hot%20100%20as%20Wiz%20Khalifa%20%27See%20You%20Again%27%20Rises%20to%20No.%201%20%20%20Buzz%20%20%20Music%20Times_files/video_player.htm" scrolling="no" width="100%" frameborder="0" height="300"></iframe></div></div></div>    <div id="adunit_article_right_top_computer" class="adunit_rectangle"><div id="article_right_top_computer">
- <script type="text/javascript">
-  googletag.cmd.push(function() { googletag.display('article_right_top_computer'); });
- </script>
-<div style="border: 0pt none;" id="google_ads_iframe_/27637309/musictimes/articles_1__container__"><iframe src="javascript:&quot;<html><body style='background:transparent'></body></html>&quot;" style="border: 0px none; vertical-align: bottom;" marginheight="0" marginwidth="0" scrolling="no" name="google_ads_iframe_/27637309/musictimes/articles_1" id="google_ads_iframe_/27637309/musictimes/articles_1" width="300" frameborder="0" height="600"></iframe></div></div></div>    <div class="s-popular2">
-    <div class="sec-title"><h4><span>//</span> Popular Now</h4></div>
-        <a href="http://www.musictimes.com/articles/40319/20150604/ed-sheeran-roots-cover-fetty-way-trap-queen-jimmy-fallon.htm" class="bx-list">
-        <p class="photo"><span>1</span><img class="" src="Taylor%20Swift%20%27Bad%20Blood%27%20Slips%20on%20Hot%20100%20as%20Wiz%20Khalifa%20%27See%20You%20Again%27%20Rises%20to%20No.%201%20%20%20Buzz%20%20%20Music%20Times_files/ed-sheeran-performs-on-the-tonight-show-june-1-2015.jpg"></p>
-        <h3 class="at-title2">Ed Sheeran, The Roots Cover Fetty Wap 'Trap Queen' on Jimmy Fallon</h3>
-    </a>
-        <a href="http://www.musictimes.com/articles/40343/20150605/kanye-west-kim-kardashian-shutting-down-disneyland-norths-birthday-party.htm" class="bx-list">
-        <p class="photo"><span>2</span><img class="" src="Taylor%20Swift%20%27Bad%20Blood%27%20Slips%20on%20Hot%20100%20as%20Wiz%20Khalifa%20%27See%20You%20Again%27%20Rises%20to%20No.%201%20%20%20Buzz%20%20%20Music%20Times_files/kanye-west-kim-kardashian.jpg"></p>
-        <h3 class="at-title2">Kanye West and Kim Kardashian Shutting Down Disneyland for North's Birthday Party</h3>
-    </a>
-        <a href="http://www.musictimes.com/articles/40194/20150603/dom-kennedy-releases-new-album-following-2bad-single.htm" class="bx-list">
-        <p class="photo"><span>3</span><img class="" src="Taylor%20Swift%20%27Bad%20Blood%27%20Slips%20on%20Hot%20100%20as%20Wiz%20Khalifa%20%27See%20You%20Again%27%20Rises%20to%20No.%201%20%20%20Buzz%20%20%20Music%20Times_files/dom-kennedy-released-his-self-titled-album-this-week.jpg"></p>
-        <h3 class="at-title2">Dom Kennedy Releases New Album Following '2Bad' Single</h3>
-    </a>
-        <a href="http://www.musictimes.com/articles/40053/20150602/eminem-phenomenal-review-new-song-southpaw-soundtrack-listen-stream.htm" class="bx-list">
-        <p class="photo"><span>4</span><img class="" src="Taylor%20Swift%20%27Bad%20Blood%27%20Slips%20on%20Hot%20100%20as%20Wiz%20Khalifa%20%27See%20You%20Again%27%20Rises%20to%20No.%201%20%20%20Buzz%20%20%20Music%20Times_files/eminem-performs-at-lollapalooza-2014_002.jpg"></p>
-        <h3 class="at-title2">Eminem 'Phenomenal' Review: New Song from 'Southpaw' Soundtrack Packs a Punch</h3>
-    </a>
-        <a href="http://www.musictimes.com/articles/40278/20150604/wedding-music-john-legend-ed-sheeran-elvis-presley-first-dance.htm" class="bx-list">
-        <p class="photo"><span>5</span><img class="" src="Taylor%20Swift%20%27Bad%20Blood%27%20Slips%20on%20Hot%20100%20as%20Wiz%20Khalifa%20%27See%20You%20Again%27%20Rises%20to%20No.%201%20%20%20Buzz%20%20%20Music%20Times_files/wedding-music-playlist.jpg"></p>
-        <h3 class="at-title2">Top Wedding Music: John Legend, Ed Sheeran &amp; Elvis Presley Get Most Spins</h3>
-    </a>
-    </div><!-- /s-popular2 --></div><!-- /side -->
 <p class="clr"></p>
 
 <div class="bx-fcon2">
@@ -757,11 +679,7 @@ $('img.lazy').lazyload({ effect : "fadeIn", failure_limit : 40 });
  </script>
 <div style="border: 0pt none;" id="google_ads_iframe_/27637309/musictimes/articles_6__container__"><iframe src="javascript:&quot;<html><body style='background:transparent'></body></html>&quot;" style="border: 0px none; vertical-align: bottom;" marginheight="0" marginwidth="0" scrolling="no" name="google_ads_iframe_/27637309/musictimes/articles_6" id="google_ads_iframe_/27637309/musictimes/articles_6" width="1" frameborder="0" height="1"></iframe></div></div>
 <!-- Interstital --><!-- EasyNative_Bottom_Slider -->
-<div id="article_footer_slider_computer_oop2">
- <script type="text/javascript">
-  googletag.cmd.push(function() { googletag.display('article_footer_slider_computer_oop2'); });
- </script>
-<div style="border: 0pt none; left: 0px; display: block; position: fixed; bottom: 0px; z-index: 10000;" id="google_ads_iframe_/27637309/musictimes/articles_7__container__"><iframe src="javascript:&quot;<html><body style='background:transparent'></body></html>&quot;" style="border: 0px none; vertical-align: bottom; width: 265px; height: 472px;" marginheight="0" marginwidth="0" scrolling="no" name="google_ads_iframe_/27637309/musictimes/articles_7" id="google_ads_iframe_/27637309/musictimes/articles_7" width="1" frameborder="0" height="1"></iframe></div></div>
+<div id="article_footer_slider_computer_oop2"></div>
 <!-- EasyNative_Bottom_Slider -->
 <!-- start getclicky code -->
 <div style="display:none;">
