need you to work pls

--- a/ACL-Fest-2015/index.html
+++ b/ACL-Fest-2015/index.html
@@ -486,23 +486,7 @@ error: function(xhr, textStatus, errorThrown) {
 cmg.query.ajax(settings);
 }
 });
-</script><script type="text/javascript" src="http://media.cmgdigital.com/shared/media/2015-05-21-08-19-36/web/common/javascript/chartbeat_topwidget.js"></script><script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAvOY2tUjwfZoCop036PBJh9FUg7qcX1Q&sensor=false"></script><div id="fb-root"></div><script>
-        window.fbAsyncInit = function() {
-            FB.init({
-                appId      : '135078579956731',
-                xfbml      : true,
-                version    : 'v2.0'
-            });
-        };
-
-        (function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script><!-- Begin comScore Tag --><script type="text/javascript">
+</script><script type="text/javascript" src="http://media.cmgdigital.com/shared/media/2015-05-21-08-19-36/web/common/javascript/chartbeat_topwidget.js"></script><script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAvOY2tUjwfZoCop036PBJh9FUg7qcX1Q&sensor=false"></script><div id="fb-root"></div><!-- Begin comScore Tag --><script type="text/javascript">
       var _comscore = _comscore || [];
       _comscore.push({ c1: "2", c2: "6035944" });
       (function() {
@@ -753,27 +737,7 @@ Learn about <a class="cm-not-modal-content" href="http://www.coxmediagroup.com/c
       cmg.cmgSiteIndex = $('.cm-site-index-container').cmgSiteIndex();
       cmg.cmgSiteIndex.init();
     });
- </script><!-- retargeting body --><div class="cm-retargeting-pixels cm-retargeting-pixels-body"><script type="text/javascript">ggv2id='b735a2c9';</script><script type="text/javascript" src="http://g2.gumgum.com/javascripts/ggv2.js"></script></div><!-- end retargeting body --><!-- begin analytics block --><script type="text/javascript">
-    var pattern = new RegExp('\/[0-9]+\/[0-9]+\/[0-9]+\/.*\/');
-    if (pattern.test(window.location.pathname)) {
-        var _sf_async_config={uid:31585,domain:"blogs.austin360.com"};
-        (function(){
-            function loadChartbeat() {
-                window._sf_endpt=(new Date()).getTime();
-                var e = document.createElement('script');
-                e.setAttribute('language', 'javascript');
-                e.setAttribute('type', 'text/javascript');
-                e.setAttribute('src',
-                   (("https:" == document.location.protocol) ? "https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/" : "http://static.chartbeat.com/") +
-                   "js/chartbeat.js");
-                document.body.appendChild(e);
-            }
-            var oldonload = window.onload;
-            window.onload = (typeof window.onload != 'function') ?
-                loadChartbeat : function() { oldonload(); loadChartbeat(); };
-        })();
-    }
-</script><span style="display:none;" id="cm_s_code"></span><!-- SiteCatalyst code version: H.25.5.
+ </script><span style="display:none;" id="cm_s_code"></span><!-- SiteCatalyst code version: H.25.5.
         Copyright 1996-2013 Adobe, Inc. All Rights Reserved
         More info available at http://www.omniture.com --><script type="text/javascript">//<![CDATA[
             
