--- a/Complex-demo/index.html
+++ b/Complex-demo/index.html
@@ -30,35 +30,7 @@
 
 
 <!-- Simplereach -->
-<script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/cs.js" async="" type="text/javascript"></script><script async="" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/www-widgetapi.js" id="www-widgetapi-script" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/iframe_api"></script><script async="" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/yad.js"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/vglnk.js" async="" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/widgets.js" id="twitter-wjs"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/sdk.js" id="facebook-jssdk"></script><script async="" type="text/javascript" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/end"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/v1.js" async="" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/analytics.js" async=""></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/dc.js" async="" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/gtm.js" async=""></script><script async="" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/yad.js"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/embedCode.js" async="" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/ga.js" async="" type="text/javascript"></script><script>
-__prototype_reach_config = {
-    pid: '53ee2e1697b0c992c7000022',
-    title: 'Vic Mensa and Kanye West Release the Video For &quot;U Mad&quot;',
-    url: 'http://www.complex.com/music/2015/06/vic-mensa-new-video-u-mad-f-kanye-west',
-    date: '2015-06-09 17:57:24',
-    authors: ['Zach Frydenlund'],
-    channels: ['Music'],
-    tags: ['kanye-west', 'news', 'vic-mensa', 'videos', 'video-still'],
-    landing_url: 'http://www.complex.com/music/2015/06/vic-mensa-new-video-u-mad-f-kanye-west',
-    iframe: true,
-    ignore_errors: false
-};
-
-// Create the __reach_config from the prototype
-__reach_config = JSON.parse(JSON.stringify(__prototype_reach_config));
-
-
-// Create the reach_config into a new ajax version
-__ajax_reach_config = JSON.parse(JSON.stringify(__prototype_reach_config));
-
-(function(){
-    var s = document.createElement('script');
-    s.async = true;
-    s.type = 'text/javascript';
-    s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js';
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(s);
-})();
-</script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/reach.js" type="text/javascript" async=""></script>
+<script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/cs.js" async="" type="text/javascript"></script><script async="" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/www-widgetapi.js" id="www-widgetapi-script" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/iframe_api"></script><script async="" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/yad.js"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/vglnk.js" async="" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/widgets.js" id="twitter-wjs"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/sdk.js" id="facebook-jssdk"></script><script async="" type="text/javascript" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/end"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/v1.js" async="" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/analytics.js" async=""></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/dc.js" async="" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/gtm.js" async=""></script><script async="" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/yad.js"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/embedCode.js" async="" type="text/javascript"></script><script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/ga.js" async="" type="text/javascript"></script>
 
 <!-- Sailthru -->
     <meta name="sailthru.author" content="Zach Frydenlund">
@@ -81,7 +53,10 @@ __ajax_reach_config = JSON.parse(JSON.stringify(__prototype_reach_config));
 <link rel="apple-touch-icon" sizes="180x180" href="http://images.complex.com/complex/image/upload/v1426696463/Complex_180x180_obsb5h.png">    <link rel="alternate" type="application/rss+xml" title="Subscribe to Complex.com" href="http://assets.complex.com/feeds/channels/all.xml">
 
         <meta name="p:domain_verify" content="51da1c238ae41f7163c35ac3e762917b">
-<script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/631700291.js"></script><iframe style="display: none;" id="spr-iframe-x" visible="false" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/container.htm" name="spr" width="1" height="1"></iframe>
+<script src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/631700291.js"></script>
+    
+<!--    <iframe style="display: none;" id="spr-iframe-x" visible="false" src="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/container.htm" name="spr" width="1" height="1"></iframe>-->
+    
 <link href="Vic%20Mensa%20and%20Kanye%20West%20Release%20the%20Video%20For%20%27U%20Mad%27%20_%20Complex_files/cmplx-svg.css" rel="stylesheet">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
