--- a/Greenlabel-demo/index.html
+++ b/Greenlabel-demo/index.html
@@ -92,7 +92,7 @@ img.emoji {
 var sranalytics = {"version":"0.1.4","pid":"549066d2e795481ddb00002d","iframe":"0","title":"Who Are Your Favorite Rappers\u2019 Favorite Rappers Right Now?","url":"http:\/\/greenlabel.com\/sound\/who-are-your-favorite-rappers-favorite-rappers-right-now\/","date":"2015-06-09 14:23:09","channels":["sound"],"tags":["List"],"authors":["HipHopDX"]};
 /* ]]> */
 </script>
-<script type="text/javascript" src="Who%20Are%20Your%20Favorite%20Rappers%E2%80%99%20Favorite%20Rappers%20Right%20Now%20%20_%20Green%20Label_files/sranalytics.js"></script><script src="Who%20Are%20Your%20Favorite%20Rappers%E2%80%99%20Favorite%20Rappers%20Right%20Now%20%20_%20Green%20Label_files/reach.js" type="text/javascript" async=""></script>
+<!--<script type="text/javascript" src="Who%20Are%20Your%20Favorite%20Rappers%E2%80%99%20Favorite%20Rappers%20Right%20Now%20%20_%20Green%20Label_files/sranalytics.js"></script><script src="Who%20Are%20Your%20Favorite%20Rappers%E2%80%99%20Favorite%20Rappers%20Right%20Now%20%20_%20Green%20Label_files/reach.js" type="text/javascript" async=""></script>-->
 
     <!-- cmnUNT | Begin head script -->
     <script data-cfasync="false" type="text/javascript">
@@ -970,8 +970,8 @@ rappers.</p>
 			selectorFullMatch: false,
         
         monitorSelector: '.slide-content',
-            minHotttnesss: 0.6707, // IRS
-            minFamiliarity: 0.6707 // IRS
+            minHotttnesss: 0.7707, // IRS
+            minFamiliarity: 0.7707 // IRS
         }
     </script>
 <script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
