--- a/Greenlabel-demo/index.html
+++ b/Greenlabel-demo/index.html
@@ -950,7 +950,7 @@ writeCaptureRefresh();          $('.thumb.active').removeClass('active');
 
             <div class="entry-content span6 offset3 slide-content"><p>We
  all have our favorite rappers—our top five dead or alive. From Wu Tang 
-to 2pac and all the greats in between, every rap fan has a handful of 
+to 2Pac and all the greats in between, every rap fan has a handful of 
 preferred rhymers that he keeps on his iPod rotation. But what are the 
 ones behind the microphone listening to on the day-to-day? What’s on the
  playlists of the top hip-hop heavyweights?</p>
