--- a/Indietronica-demo/index.html
+++ b/Indietronica-demo/index.html
@@ -140,7 +140,7 @@ artist.</p>
 <input id="searchsubmit" value="Search" type="submit">
 </form></aside><div style="height: 38px;" class="sticky-wrapper" id="soundcloud-widget-2-sticky-wrapper"><aside style="" id="soundcloud-widget-2" class="widget soundcloud">	<h3 class="widget-title"></h3><h2>Radio</h2>	<script type="text/javascript">jQuery('.soundcloud').sticky();</script>
 <script src="Foxes%20%E2%80%93%20Body%20Talk%20_%20Indietronica%20is%20a%20new%20music%20blog_files/sdk.js"></script>
-<iframe scrolling="no" src="Foxes%20%E2%80%93%20Body%20Talk%20_%20Indietronica%20is%20a%20new%20music%20blog_files/a.htm" width="100%" frameborder="no" height="450"></iframe>
+<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F120741660&amp;color=8be8de&amp;auto_play=false&amp;show_artwork=true&amp;show_playcount=false"></iframe>
 </aside></div>	</div><!-- #secondary -->
 <div class="clear"></div>
 </div><!-- #main .wrapper -->
