--- a/ITM-demo/index.html
+++ b/ITM-demo/index.html
@@ -13,7 +13,7 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+    <script src="js/Soundninja.js" type="application/javascript" async="async"></script>
     <link href="css/screen.css" rel="stylesheet" type="text/css" />
 </head>
 
