--- a/Inverted-demo/index.html
+++ b/Inverted-demo/index.html
@@ -675,7 +675,7 @@ euphoric waves coursed through the crowd as day broke.&nbsp;(JH)</p>
             minFamiliarity: 0.6707 
         }
 </script>
-<script src="../build/Soundninja.js" type="application/javascript" async="async"></script> 
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
             
             <style>
                 #section-content {margin-top: 0px !important;}
