inverted audio and style fixes

--- a/Inverted-demo/index.html
+++ b/Inverted-demo/index.html
@@ -672,7 +672,8 @@ euphoric waves coursed through the crowd as day broke.&nbsp;(JH)</p>
             selector: '.the_content p',
 			selectorFullMatch: false,
             minHotttnesss: 0.6707, 
-            minFamiliarity: 0.6707 
+            minFamiliarity: 0.6707,
+            useHostURL: true
         }
 </script>
 <script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
