--- a/AMBY-demo/index.html
+++ b/AMBY-demo/index.html
@@ -1038,7 +1038,7 @@ a.PIN_1440207426760_embed_grid_ft span.PIN_1440207426760_embed_grid_ft_logo { ve
                 
             <script>
         var SoundninjaOpts = {
-            selector: '.content-area p',
+            selector: '#content-area p',
 			selectorFullMatch: false,
             minHotttnesss: 0.6707, 
             minFamiliarity: 0.6707,
