switch chrome.extension out for srcFolder and adding ids to script usage

--- a/Complex-demo/index.html
+++ b/Complex-demo/index.html
@@ -424,7 +424,7 @@ single. </span></p>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script src="../build/Soundninja.min.js" type="application/javascript" async></script> 
+<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async></script> 
         </div><!-- ./story-content -->
     </div><!-- ./article-ga-wrap -->
 
