--- a/Earmilk-demo/index.html
+++ b/Earmilk-demo/index.html
@@ -706,7 +706,7 @@ var zbPregResult = '0';
             minFamiliarity: 0.6707
         }
 </script>
-<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="../build/Soundninja.js" type="application/javascript" async="async"></script> 
     
     
 </div> 
