--- a/Greenlabel-demo/index.html
+++ b/Greenlabel-demo/index.html
@@ -974,7 +974,7 @@ rappers.</p>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
         
 
     <footer>
