--- a/NEN-demo/index.html
+++ b/NEN-demo/index.html
@@ -896,7 +896,7 @@ h=document.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})()
             minFamiliarity: 0.6707
         }
 </script>
-<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
                                 
 
 								<footer class="article-footer">
