--- a/Willowwood-demo/index.html
+++ b/Willowwood-demo/index.html
@@ -693,7 +693,7 @@ grand piano, vocal duet and we’re assured that “...there’s no end to our
             minFamiliarity: 0.6707 
         }
 </script>
-<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
 <script type="text/javascript" src="willowwood_files/stratus.js"></script>
 <script type="text/javascript">
   $(document).ready(function(){
