--- a/popcrush-demo/index.html
+++ b/popcrush-demo/index.html
@@ -1571,7 +1571,7 @@ _gaq.push(['_trackPageview']);
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
     </head>
 
 <body data-twttr-rendered="true" class="single single-post postid-424041 single-format-standard onetone clear-sidebar-header block-listen-bar list-post category-lists category-opinion"><iframe id="tynt-gpt-iframe-1" style="position: absolute; visibility: hidden; width: 1px; height: 1px;" frameborder="0"></iframe>
