revert of srcFolder change until partners update their shit

--- a/ACL-Fest-2015/index.html
+++ b/ACL-Fest-2015/index.html
@@ -2267,7 +2267,7 @@ if ( 'object' === typeof wpcom_mobile_user_agent_info ) {
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
     
 
         </body>
