--- a/Inverted-demo/index.html
+++ b/Inverted-demo/index.html
@@ -676,7 +676,7 @@ euphoric waves coursed through the crowd as day broke.&nbsp;(JH)</p>
             useHostURL: true
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
             
             <style>
                 #section-content {margin-top: 0px !important;}
