--- a/Noiseporn-demo/index.html
+++ b/Noiseporn-demo/index.html
@@ -2264,7 +2264,7 @@ Activity</p>
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
 
 										
 	<!-- Related Posts -->
