--- a/PNP-demo/index.html
+++ b/PNP-demo/index.html
@@ -899,7 +899,7 @@ Heartdrakers, Keef Richards and, of course, Future Hendrix.</p>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
     
 
 <div class="sidebarwrap" id="sidebar_wrapper">
