--- a/The-Wrap-demo/index.html
+++ b/The-Wrap-demo/index.html
@@ -311,7 +311,7 @@ class="video-play-16"></span></div>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
                     
                 </section>
                 <span style="display:none;" class="twitter_sharer">http://twitter.com/share?text=&#8216;The Voice&#8217; Crowns a Champion; Christina Aguilera Impersonates Miley, Britney, Cher (Video)&via=TheWrap&url=https%3A%2F%2Fwww.thewrap.com%2Fthe-voice-crowns-a-champion-christina-aguilera-impersonates-miley-britney-cher-video%2F&t=&#8216;The Voice&#8217; Crowns a Champion; Christina Aguilera Impersonates Miley, Britney, Cher (Video)</span> <span style="display:none;" class="facebook_sharer">http://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.thewrap.com%2Fthe-voice-crowns-a-champion-christina-aguilera-impersonates-miley-britney-cher-video%2F%2F&t=&#8216;The Voice&#8217; Crowns a Champion; Christina Aguilera Impersonates Miley, Britney, Cher (Video)</span>
