--- a/audiofemme/index.html
+++ b/audiofemme/index.html
@@ -626,7 +626,7 @@ particular the highly intelligent yet playful musings on love. They just
             minFamiliarity: 0.6707 
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
     
 <!-- You can start editing here. -->
 <div id="comment-wrap" class="clearfix">
