--- a/spin-demo-the-best-50-albums-of-2015/index.html
+++ b/spin-demo-the-best-50-albums-of-2015/index.html
@@ -490,7 +490,7 @@ production shorn of El-P’s weirdness ten years ago, tracks like “Blade
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
                 </div>
             
                                                 <div class="sp-pagination row">
