--- a/Hitfix-demo/index.html
+++ b/Hitfix-demo/index.html
@@ -1127,7 +1127,7 @@ Latifah's take on Bessie Smith and other blues masters' songs in the
             minFamiliarity: 0.8707 // IRS
         }
     </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
     
 <div class="article-footer" id="end-of-content">
 <div style="bottom: -410px;" class="in-content-promo chosen" id="slidebox">
