sfyyal mock demo

--- a/MusicDealers-demo/index.html
+++ b/MusicDealers-demo/index.html
@@ -104,7 +104,7 @@
 <script type="text/javascript" src="musicDealers_files/jquery.js"></script>
 <script type="text/javascript" src="musicDealers_files/jquery_002.js"></script>
 <script type="text/javascript" src="musicDealers_files/scripts_007.js"></script>
-<script type="text/javascript" src="musicDealers_files/scripts_003.js"></script>
+<!--<script type="text/javascript" src="musicDealers_files/scripts_003.js"></script>-->
 <script type="text/javascript" src="musicDealers_files/scripts_005.js"></script>
 <script type="text/javascript" src="musicDealers_files/scripts_004.js"></script>
 <script type="text/javascript" src="musicDealers_files/scripts_006.js"></script>
